# embykeeper

./: .bumpversion.cfg  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  MANIFEST.in  Makefile  README.md  app.json  cli.py  config.example.toml  heroku.yml  installer.cfg  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  web.py
.codesandbox/: Dockerfile  tasks.json  template.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_BODY.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md
.github/workflows/: ci.yml  docker-dev.yml  docker-editable.yml  docker.yml  dockerhub-publish.yml  docs.yml  draft-release.yml  lint.yml  pypi-publish.yml  pypi.yml  stable.yml  stale.yml  windows-installer-script.yml  windows.yml
data/: digit5-teko@v1.json  digit5-teko@v1.onnx.REMOVED.git-id
deploy/: Dockerfile  README.md
deploy/.github/: dependabot.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts
docs/components/: Logo.vue  TerminalExample.vue  TerminalExampleSection.vue  WebExampleSection.vue
docs/guide/: Linux-Docker-Compose-部署.md  Linux-Docker-部署.md  Linux-从-PyPI-安装.md  Linux-从源码构建.md  Windows-通过安装包安装.md  Windows-通过脚本安装.md  _支持.md  _简要配置.md  index.md  功能说明-日志推送.md  功能说明-每日签到.md  功能说明-群组监控.md  功能说明-考核辅助.md  功能说明-自动保活.md  功能说明-自动水群.md  参与开发.md  发布周期.md  命令行参数.md  在线部署.md  安装指南.md  常见问题.md  支持的站点.md  许可.md  调试工具.md  配置文件.md  高级用户.md
embykeeper/: __init__.py  __main__.py  cli.py  data.py  log.py  loop.py  settings.py  utils.py  var.py  windows.py
embykeeper/data/ocr/: digit5-teko.json  words6.json  words6.onnx.REMOVED.git-id
embykeeper/embywatcher/: __init__.py  emby.py  extra.py  main.py  watcher.py
embykeeper/telechecker/: __init__.py  debug.py  link.py  lock.py  log.py  main.py  notify.py  tele.py
embykeeper/telechecker/bots/: _base.py  _templ_a.py  _templ_b.py  agentsgk.py  aisgk.py  akile.py  akile_group.py  akuai.py  alpha.py  apop.py  apop_pro.py  apoppro.py  avibi.py  awa.py  awamusic.py  awatv.py  baidusgk.py  base.py  bearsgk.py  bingdaosgk.py  bitsgk.py  bluesea.py  bostsgk.py  bytevirt_group.py  carll1sgk.py  carll2sgk.py  cc.py  charon.py  charon_old.py  chunjiangsgk.py  ciji.py  data007sgk.py  datasgk.py  dingdangsgk.py  dogsgk.py  dvfilm.py  embyhub.py  fanhuasgk.py  feiji.py  feiyue.py  (+81 more)
embykeeper/telechecker/messager/: _base.py  base.py  common.py  marmot.py  nakonako.py  pornemby.py  test.py  (+2 more)
embykeeperweb/: __init__.py  __main__.py  app.py
embykeeperweb/templates/: 404.html  config.html  console.html  login.html
scripts/: docker-entrypoint-dev.sh  docker-entrypoint.sh
telechecker/: __init__.py  base.py  jms.py  jms_iptv.py  ljyy.py  peach.py  terminus.py
test/: test_cli.py
tests/: test_cli.py
utils/: .gitignore  dummy_captcha_checkin_bot.py  dummy_cc_checkin_bot.py  dummy_charon_checkin_bot.py  dummy_checkin_bot.py  dummy_pilipili_checkin_bot.py  dummy_send_bot.py  dummy_terminus_exam_bot.py  dummy_text_checkin_bot.py  dummy_webapp.html  get_charon_captcha.py  get_jms_history_captcha.py  get_misty_captcha.py  get_pornemby_question.py  parse_terminus_questions.py  test_ddddocr.py
windows/installer-gui/: Setup.nsi
windows/installer-script/: Embykeeper.bat
(+52 files in other folders)
