[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "embykeeper"
version = "3.2.18"
authors = [
    {name = "jackzzs", email = "jackzzs@outlook.com"},
]
description = "Daily checkin automator for emby bots in telegram."
keywords = [
    "emby",
    "telegram",
    "checkin",
    "automator",
    "bot",
    "telegram bot",
    "keep active",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Chinese (Simplified)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8,<3.11"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/embykeeper/embykeeper"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
embykeeper = "embykeeper.cli:app"
embykeeperweb = "embykeeperweb.app:cli"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = {namespaces = false}

[tool.black]
line-length = 110
