[bumpversion]
current_version = 1.2.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:zzlib/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[options.entry_points]
console_scripts =
    embykeeper = embykeeper.cli:app
